# brats2021-challenge-segmentation-task

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
brain_tumor_segmentation/: __init__.py  config.py  dataset.py
docs/: mkdocs.yml
docs/data/: README.md
notebooks/data-engineering/: 1-data_exploration_V1.ipynb  4-data_splitter_V1.ipynb
notebooks/data-engineering/data-wrangling/: 2-data_cleaning_V1.ipynb  3-data_transformation_V1.ipynb
notebooks/data-engineering/dataset-split-strategies/: dataset_5-folds_strategy_2_v1.json  dataset_splits_strategy-1_v1.json
notebooks/model-engineering/: 5.1-model_training_swin_unetr.ipynb
