[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "brain_tumor_segmentation"
version = "0.0.1"
description = "Assess state-of-the-art machine learning (ML) methods used for brain tumor image analysis in mpMRI scans"
authors = [
  { name = "Stefan Radonjic" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["brain_tumor_segmentation"]
force_sort_within_sections = true
